# WEC-Grid

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  Install.ps1  MANIFEST.in  README.md  SLD_Implementation_Summary.md  mkdocs.yml  pyPSA_Components.md  pyproject.toml  pytest.ini  setup.py  test_sld_functionality.py
WecGrid/: __init__.py  core.py
WecGrid/PSSe/: __init__.py  psse_interface.py  psse_wrapper.py
WecGrid/database_handler/: temp.py
WecGrid/pyPSA/: __init__.py  pypsa_interface.py  pypsa_wrapper.py
WecGrid/utilities/: path_config.txt
WecGrid/viz/: __init__.py  core_viz.py  psse_viz.py  pypsa_viz.py
WecGrid/wec/: wec_class.py
data/: WECGrid.db
data/grid_models/: IEEE_14_bus.RAW
data/wec_models/LUPA/: w2gSim.m  wecSimInputFile.m
docs/: DOCUMENTATION_STYLE_GUIDE.md  _config.yml  complete_database_schema.sql  contribution.md  database_schema_v2.md  design.md  engine.md  index.md  install.md  installation.md  parser.md  powerflow_raw_summary.md  psse.md  quickstart.md  software-design.md  support.md  wec.md
docs/diagrams/sequence/: sequence.txt
docs/diagrams/uml/: uml.txt
docs/examples/: basic-example.md  example-1.md  example-2.md  example-3.md  example1.ipynb  example2.ipynb  example3.ipynb  example4.ipynb
docs/reference/: api.md  citation.md  troubleshooting.md
docs/user-guide/: software-design.md
docs/wecgrid/: base.md  database.md  engine.md  plot.md  psse.md  pypsa.md  time.md  wec.md  wecsim.md
examples/: PSSE_test.ipynb  README.md  WECGrid.db  basics.ipynb  comparison.ipynb  db_sitch.ipynb  example1.ipynb  example2.ipynb  example3.ipynb  example4.ipynb  old.py  performance_metrics.ipynb  preformance_metrics.ipynb  pyPSA_test.ipynb  pypsa.ipynb  refactor.ipynb  setup.ipynb  temp.ipynb  test.ipynb  wec-sim.ipynb
examples/performance/: met1.py
examples/performance_data/: comparison_both_ieee14.json  comparison_both_ieee24.json  comparison_both_ieee30.json  comparison_both_ieee39.json  comparison_both_wec_ieee14.json  comparison_both_wec_ieee24.json  comparison_both_wec_ieee30.json  comparison_both_wec_ieee39.json  comparison_psse_ieee14.json  comparison_psse_ieee24.json  comparison_psse_ieee30.json  comparison_psse_ieee39.json  comparison_pypsa_ieee118.json  comparison_pypsa_ieee14.json  comparison_pypsa_ieee24.json  comparison_pypsa_ieee30.json  comparison_pypsa_ieee300.json  comparison_pypsa_ieee39.json  comparison_pypsa_ieee96.json  ieee14_psse_time.json  ieee14_psse_wec_time.json  ieee14_pypsa_time.json  ieee14_pypsa_wec_time.json  ieee24_psse_time.json  ieee24_psse_wec_time.json  ieee24_pypsa_time.json  ieee24_pypsa_wec_time.json  ieee30_psse_time.json  ieee30_psse_wec_time.json  ieee30_pypsa_time.json  ieee30_pypsa_wec_time.json  ieee39_psse_time.json  ieee39_psse_wec_time.json  ieee39_pypsa_time.json  ieee39_pypsa_wec_time.json  ieee96_pypsa_time.json  ieee96_pypsa_wec_time.json  ieee_118_pypsa_time.json  ieee_118_pypsa_wec_time.json  ieee_300_pypsa_time.json  (+2 more)
notebooks/: WEC_SIM_test.ipynb  bus1_MISMATCH.csv  bus1_P_Load.csv  bus1_pgen_data.csv  bus25_MISMATCH.csv  bus25_P_Gen.csv  bus25_pgen_data.csv  bus7_MISMATCH.csv  bus7_P_Load.csv  bus7_pgen_data.csv  load_curve_data.csv  psse_history.pkl  viz_update.ipynb
notebooks/2_draft_data/: 2_plotting_analysis.ipynb  psse_buses.csv  psse_generators.csv  pypsa_buses.csv  pypsa_generators.csv
notebooks/SoftwareX_Paper/: paper_example.ipynb  plot_example.py  wec_outputs.tex
notebooks/public/: ECS.ipynb  IEEE_24_bus.RAW
notebooks/softwareX_output/: load_profiles.csv  psse_history.pkl  psse_history_no_wec.pkl  psse_history_wec.pkl
src/WECGrid/: __init__.py  engine.py
src/docs/: engine.md  pypsa.md
src/examples/: PSSE_test.ipynb
src/temp/: engine.py
src/wecgrid/: __init__.py  engine.py
test/: test.py  test_matlab.py  test_psse.py  test_wecgrid.py  test_wecsim.py
tests/: README.md  requirements.txt  test.py  test_imports.py
wecgrid_venv/: pyvenv.cfg
(+87 files in other folders)
