[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wecgrid"
version = "0.1.0"
description = "WEC-Grid: A tool for integrating Wave Energy Converter models into power system simulations"
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "Alexander Barajas-Ritchie", email = "barajale@oregonstate.edu"}]
license = "MIT"
dependencies = [
    "numpy==1.21.6",
    "pandas==1.3.5",
    "matplotlib==3.5.3",
    "pypsa==0.20.1",
    "grg-pssedata==0.1.4",
    "networkx==2.6.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Energy",
]

[project.optional-dependencies]
psse = [
    "pssepath",
]
matlab = ["matlabengine"]
wecsim = ["matlabengine"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/acep-uaf/WEC-GRID"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wecgrid = [
    "util/*.json",
    "modelers/wec_sim/*.json",
]

